[package]
name = "math-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
evalexpr = "6"
exmex = { version = "0.12", features = ["value"] }
fasteval = "0.2"
libloading = "0.7"
ocl = { git = "https://github.com/michaelmattig/ocl" }
rayon = "1.5"
serde = "1.0"
wasmer = { version = "2.1", features = ["wasmer-compiler-llvm"] }